src/App.css
html {
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body, h1, h2, h3, h4, h5, h6, p, ol, ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol, ul {
  list-style: none;
}

img {
  max-width: 100%;
}

p, span, h1,h2,h3,h4,h5 {
  color: #fff;
}

h2 {
  font-size: 38px;
  line-height: 48px;
  font-weight: 500;
}


.svg {
  filter: invert(1);
  margin-right: 5px;
}

.svg-container {
  display: flex;
  align-items: flex-start;
  justify-content: flex-end;
}

.svg-container span {
  text-transform: capitalize;
}

.info {
  text-align: right;
  font-weight: 500;
  font-size: 20px;
  margin-top: 5px;
  text-transform: capitalize;
}
 
.hero {
  position: relative;
  height: 100vh;
  width: 100vw;
}

.hero img {
  height: 100vh;
  width: 100vw;
  object-fit: cover;
}

.city-date-container {
  position: absolute;
  bottom: 300px;
  left: 50px;
  width: 100%;
}

@media only screen and (max-width: 767px) {
  .city-date-container {
    position: absolute;
    bottom: 450px;
    width: 100%;
  }
}


.form {
  position: absolute;
  top: 30px;
  right: 30px;
  z-index: 1;
}

.weatherContainer {
  position: absolute;
  bottom: 80px;
  width: 100%;
}

.weatherContainer__inner {
  width: 75%;
  background: none 0% 0% / auto repeat scroll padding-box border-box rgba(255, 255, 255, 0.28);
  border-radius: 2mm;
  
}

@media only screen and (max-width: 767px) {
  .weatherContainer__inner {
    width: 100vw;
  }
}


.parametersBox {
  display: flex;
  flex-wrap: wrap;
  padding: 60px;
}

@media only screen and (max-width: 767px) {
  .parametersBox {
    flex-direction: column;
    padding: 0;
  }
}

@media only screen and (max-width: 767px) {
  .weatherParameters {
    padding: 10px;
  }
}


.mainBox {
  flex: 2 1 auto;
  

}
.smallerBox {
  flex: 1 1 auto;
 
}

